Mejoras al contenido de la página de Nosotros: Analisis, organización y mejoras al texto del contenido

--- a/proyecto-code-r11.html
+++ b/proyecto-code-r11.html
@@ -25,19 +25,10 @@
             LA INFORMACIÓN ES PODER, APROVECHA TODO ESTE MATERIAL A TU FAVOR
           </h2>
           <p>
-            El mundo digital ha evolucionado y nunca fue tan fácil aprender a
-            programar, desarrollar aplicaciones y sitios web. Y todo esto se
-            debe al valioso contenido que se encuentra disponible de manera
-            pública en la Internet. Claro está, esto es posible gracias a una
-            gran comunidad de desarrolladores y las diversas empresas
-            tecnológicas que comparten sus cursos y documentación sobre el
-            diseño y desarrollo web. De tal manera, que es posible aprender
-            directamente de la fuente oficial con información de primera mano.
+            El mundo digital ha evolucionado, y nunca ha sido tan fácil aprender a programar, desarrollar aplicaciones y crear sitios web. Esto es posible gracias a la valiosa información disponible públicamente en Internet, cortesía de una gran comunidad de desarrolladores y diversas empresas tecnológicas que comparten sus cursos y documentación sobre diseño y desarrollo web. Aprender directamente de la fuente oficial con información de primera mano nunca ha sido más accesible.
           </p>
           <p>
-            En CODE R11 nos esforzamos en actualizar este sitio con el mejor
-            material disponible para tu aprendizaje y el dominio del
-            desarrollo web.
+            En CODE R11, nos esforzamos por mantener este sitio actualizado con el mejor material disponible para tu aprendizaje y dominio del desarrollo web.
           </p>
         </div>
       </article>
@@ -46,18 +37,7 @@
       <article class="article-block-only-text centrar-texto">
         <h2>APRENDIZAJE ACTIVO</h2>
         <p>
-          Bienvenidos a <strong style="color: black">Code R11</strong>, tu
-          mapa para dominar el diseño y desarrollo
-          web frontend desde cero. Un proyecto centrado en el ecosistema de JavaScript como
-          pilar fundamental para tu aprendizaje activo.
-        </p>
-        <p>
-          Creado en el año 2022 por <strong style="color: black">Juan Martinez</strong> y su hija <strong
-            style="color: black">María
-            Gabriela Martinez</strong> como un sitio para recopilar en un solo lugar los enlaces
-          relevantes para el aprendizaje del desarrollo web a nivel frontend. Lo nombraron con cariño, <b>código
-            R11</b> y
-          la idea era establecer y organizar este proyecto en <strong>11 categorías principales:</strong>
+          Bienvenidos al <strong>Proyecto Code R11</strong>, tu mapa para dominar el diseño y desarrollo web front-end desde cero. Este proyecto, centrado en el ecosistema de JavaScript como pilar fundamental, fue creado en 2022 por Juan Martinez y su hija María Gabriela Martinez para recopilar en un solo lugar los enlaces relevantes para el aprendizaje del desarrollo web a nivel front-end. Nombrado con cariño como "CODE R11", el sitio organiza sus <strong>Recursos</strong> en <strong>11</strong> categorías principales:
         </p>
         <br>
         <ol class="lista-categorias">
@@ -118,20 +98,7 @@
           </li>
         </ol>
         <p>
-          Ahora, tú también cuentas con acceso gratuito a toda esta base de datos del conocimiento en Code R11, la
-          cual
-          se nutre con la información que es accesible públicamente en Internet. Además, <b>te vas a ahorrar ciento de
-            horas de consultas e investigación</b> sobre donde puedes aprender desarrollo web frontend de manera
-          autodidacta en la web.</p>
-        <p>
-          Solo tienes que acceder en Code R11 al tema o categoría que te interesa y listo. De esta manera,
-          al igual que sus creadores, podrás recorrer y definir tu propia ruta de aprendizaje de acuerdo a cada
-          categoría para un estudio sistemático del desarrollo web frontend.
-        </p>
-        <p>
-          Por supuesto, este es un proyecto orgánico que pretende crecer y actualizarse con el tiempo. Y, sabemos que
-          en un futuro muy cercano, muchas más personas se sumarán y participarán en este proyecto Code R11 para
-          ayudar a otros con su aprendizaje inicial.
+          Ahora, tú también cuentas con acceso gratuito a esta base de datos del conocimiento en Code R11, lo cual te ahorrará cientos de horas de búsqueda e investigación. Simplemente accede a la categoría que te interesa y define tu propia ruta de aprendizaje.
         </p>
       </article>
     </section>
@@ -140,39 +107,18 @@
         <div class="block-columns">
           <h3>Objetivo</h3>
           <p>
-            El proyecto Code R11 es <b>un mapa de aprendizaje para los desarrolladores web a nivel frontend</b>. Nace
-            con el objetivo de
-            mostrarte el camino más corto que debes recorrer para reducir la curva de aprendizaje. Todo esto, mientras
-            que adoptas buenas prácticas y enfocas tu aprendizaje a una ruta predeterminada.
-          </p>
-          <p>
-            Este sitio te ofrece un mapa detallado con los lenguajes, herramientas y tecnologías que
-            debes usar en cada paso. Nuestra meta es lograr que avances y te conviertas en un
-            <strong style="color: black">desarrollador web profesional</strong>
-            en el menor tiempo posible.
+            El proyecto Code R11 es un mapa de aprendizaje para desarrolladores web front-end. Nace con el objetivo de mostrarte el camino más corto para reducir la curva de aprendizaje, adoptando buenas prácticas y enfocando tu aprendizaje en una ruta predeterminada. Este sitio ofrece un mapa detallado con los lenguajes, herramientas y tecnologías necesarias para que avances y te conviertas en un desarrollador web profesional en el menor tiempo posible.
           </p>
 
           <h3>Misión</h3>
           <p>
-            Nuestra misión es que cada nuevo programador se construya una base
-            sólida con los tres pilares básicos del desarrollo web moderno:
-            <b>HTML, CSS y JavaScript</b>.
+            Nuestra misión es que cada nuevo programador construya una base sólida con los tres pilares básicos del desarrollo web moderno: HTML, CSS y JavaScript. En Code R11 hemos organizado en 11 recursos o categorías toda la información necesaria para tu aprendizaje activo, y estamos orgullosos de que esta plataforma te sirva como guía.
           </p>
-          <p>
-            Es por ello que en Code R11 hemos organizado en 11 categorías toda
-            la información necesaria para tu aprendizaje activo. Además,
-            estamos orgullosos y nos llena de satisfacción de que esta plataforma te sirva como guía para tu
-            aprendizaje.
-          </p>
+
 
           <h3>Visión</h3>
           <p>
-            Nuestra visión es hacer que el aprendizaje web en Latinoamérica se
-            convierta en un proceso fluido, divertido, desafiante y más colaborativo.
-            Donde los jóvenes tengan acceso a este conocimiento digital de manera temprana, y
-            puedan aprender desde la fuente principal y se incorporen como
-            profesionales en el desarrollo web al mercado laboral. Incluso, gestionen y moneticen sus propios
-            emprendimientos.
+            Nuestra visión es que el aprendizaje web sea fluido, divertido, desafiante y colaborativo. Queremos que los jóvenes tengan acceso temprano a este conocimiento digital, aprendan de la fuente principal y se incorporen al mercado laboral como profesionales del desarrollo web, gestionando y monetizando sus propios emprendimientos.
           </p>
 
           <p>Así que, <b>enfócate, practica y avanza</b> con CODE R11.</p>
@@ -180,109 +126,17 @@
         <br>
         <hr>
         <br>
-        <h2>Aquí vas encontrar la base para tu aprendizaje activo</h2>
+        <h2>TU FUTURO PROFESIONAL</h2>
         <div style="
                 padding: 10px;
                 margin: 10px auto;
                 background-color: rgb(169, 255, 226);
               ">
           <p>
-            En Internet existe una increíble cantidad de material para tu
-            aprendizaje disponible de manera gratuita, pero
-            <strong style="color: black">¿Sabes dónde buscar?</strong> Es
-            por ello que el equipo de Code R11 se ha tomado la tarea de
-            recopilar, categorizar y organizar toda esta valiosa información
-            en este sitio.
-          </p>
-          <p>
-            A partir de este momento, Code R11 es tu centro de control para
-            tu aprendizaje activo. El sitio ideal donde encontrar
-            <strong style="color: black">una guía rápida para desarrollar tus habilidades como
-              programador</strong>. No hay excusas, en este sitio tienes acceso a una selección
-            de enlaces que te llevarán directo a la información oficial. Es
-            decir, accede hoy mismo a los cursos, documentación,
-            referencias, guías, videos e información relevante de primera
-            mano y
-            <strong style="color: black">construye tu futuro profesional</strong>.
-          </p>
-          <p>
-            Sabemos muy bien que con la práctica, la dedicación y estos
-            cursos oficiales, sin duda alguna, te vas a convertir en un
-            excelente Desarrollador Web.
+            El diseño y la programación pueden parecer intimidantes, pero con práctica y dedicación, el desarrollo web se vuelve divertido, emocionante y gratificante. La clave es practicar constantemente, desarrollando habilidades como lógica, abstracción y la capacidad para encontrar soluciones creativas. La demanda de desarrolladores web sigue creciendo, y los ingresos en esta profesión son muy competitivos. Aprender con claridad y aplicar tus conocimientos te asegurará un futuro prometedor.
           </p>
         </div>
-        <div class="block-columns">
-          <h2>
-            Pasa de los conocimientos básicos al desarrollo web frontend
-          </h2>
-          <p>
-            Hoy, tanto el diseño como el desarrollo de aplicaciones web
-            profesional gira en torno al lenguaje de programación de
-            JavaScript.
-          </p>
-          <p>
-            Tener una base fuerte te va a permitir potenciar tus habilidades y
-            convertirte en un Desarrollador Web Frontend. Para ello tendrás
-            que aprender a diseñar y estructurar tus páginas web del lado del
-            navegador.</p>
-          <p>Además, de construir aplicaciones y sitios web legibles
-            y fáciles de usar para que el usuario pueda tener siempre una
-            experiencia satisfactoria. En
-            <strong style="color: black">Code R11 obtienes un mapa detallado</strong>
-            y puedes establecer tu propia ruta de aprendizaje para potenciar estas habilidades según la estrategia que
-            definas.
-          </p>
-          <p>
-            Al dominar la base con HTML, CSS y JavaScript, vas a continuar tu camino con el aprendizaje de herramientas
-            tales como, Node.js
-            y librerías como React. Con ellas serás capaz de crear interfaces de usuario todavía más
-            poderosas. En este nivel, será muy fácil para ti, implementar y desplegar tus proyectos en la web.</p>
-          <p>
-            Al completar tanto el <b>nivel básico con HTML, CSS y JavaScript</b>, como también el <b>nivel intermedio
-              con NodeJS y
-              React</b>. Entonces, vas a estar listo para llevar tu aprendizaje a un nivel profesional.
-          </p>
-          <p>
-            Y para completar tu aprendizaje de desarrollo web frontend el próximo paso será el <b>nivel experto con
-              Next.js</b>. Que corresponde a un marco de desarrollo
-            profesional, dinámico y uno de los más completos. Sin duda alguna, estos tres niveles deber ser <b>la ruta a
-              seguir en tu aprendizaje como desarrollador web frontend profesional</b>.
-          </p>
-          <p>
-            ¿Qué hay más allá del desarrollo web Frontend? El mundo de desarrollo es muy amplio y lleno de grandes retos
-            a nivel del desarrollo Backend. Esto en sí mismo, comprende un nuevo ciclo de aprendizaje con nuevos mapas y
-            nuevas rutas que podrás encontrar en nuestro próximo proyecto.
-          </p>
-          <p>
-            Entonces, podrás completar tu ciclo de aprendizaje, con una ruta que te guie hasta lo mejor del desarrollo
-            backend y todo su gran potencial. Es decir, el código y la configuración que existe del lado del servidor en
-            la web. Tal como, seguridad, bases de datos, control de registro y acceso de usuarios a la web.
-          </p>
-          <br>
-
-          <br>
-
-          <h2>UN FUTURO PROFESIONAL CON GRANDES POSIBILIDADES</h2>
-          <p>
-            El diseño, la programación y un mundo basado en la web parecen
-            intimidantes cuando desconoces como funciona. La web es un mega
-            universo digital que con mucha práctica sin dudas podrás entender
-            y dominar. </p>
-          <p>Cuando te enfocas y practicas, el diseño y desarrollo
-            web se vuelve cada vez más divertido, emocionante y muy gratificante. Es decir, la clave es practicar y practicar. Además,
-            este tipo de aprendizaje te va a permitir desarrollar habilidades
-            increíbles, como lógica, abstracción y la capacidad para encontrar
-            soluciones creativas para proyectos digitales diversos y
-            demandantes.
-          </p>
-          <p>
-            Otra buena noticia, es que cada año el nicho para un desarrollador
-            web no para de crecer. En cuanto a los ingresos que puedes generar
-            con esta profesión, estos son muy bien pagados en términos
-            generales. Es una apuesta segura cuando tienes claro lo que tienes que aprender
-            y donde aplicar tus conocimientos.
-          </p>
-        </div>
+        
         <figure style="width: 30%; margin: 0 auto; padding: 20px">
           <img src="../public/images/logo-code-r11-04.png" alt="logo code r11" />
         </figure>
@@ -306,9 +160,7 @@
             tu código y adopta buenas prácticas
           </p>
           <p style="text-align: center">            
-            <strong style="color: black; text-transform: uppercase">Avanza</strong> y no te detengas, conviértete en el
-            mejor programador que
-            puedes llegar a ser.
+            <strong style="color: black; text-transform: uppercase">Avanza</strong> y conviértete en el mejor programador que puedes ser.
           </p>
         </blockquote>
       </article>
